--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&family=Poppins:wght@300;700& display=swap');
 
 * {
   padding: 0;
@@ -6,7 +6,8 @@
   font-family: "Poppins", sans-serif;
 }
 
-body{ background-color: black;
+body {
+  background-color: black;
 }
 
 .main {
@@ -21,7 +22,7 @@ body{ background-color: black;
 .main .box {
   height: 70vh;
   width: 100%;
-  opacity: 0.44;
+  opacity: 0.69;
   position: absolute;
   top: 0;
   background-color: black;
@@ -50,8 +51,7 @@ nav button {
 
 .hero {
   font-family: "Martel Sans", sans-serif;
-
-  height: 100%;
+  height: calc(100% - 62px);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -59,19 +59,59 @@ nav button {
   color: white;
   position: relative;
   gap: 25px;
+  padding: 0 30px;
 }
 
-.hero> :first-child{
-    font-weight: bolder;
-    font-size: 48px;
+.hero > :nth-child(1) {
+  font-family: "Poppins", sans-serif;
+  font-weight: bolder;
+  font-size: 48px;
+  text-align: center;
 }
 
-.hero> :nth-child(2){
-    font-weight: 400;
-    font-size: 24px;
+.hero > :nth-child(2) {
+  font-weight: 400;
+  font-size: 24px;
+  text-align: center;
 }
 
-.hero> :nth-child(3){
-    font-weight: 400;
-    font-size: 20px;
+.hero > :nth-child(3) {
+  font-weight: 400;
+  font-size: 20px;
+  text-align: center;
+}
+
+.separation {
+  height: 7px;
+  background-color: rgb(39, 38, 38);
+}
+
+.btn{
+  padding: 3px 8px;
+  font-weight: bold;
+  background-color: white;
+
+}
+
+.btn-red{
+  background-color: red;
+  color: white;
+  padding: 3px 24px;
+  font-size: 20px;
+  border-radius: 4px;
+
+}
+
+.main input{
+  padding: 3px 24px;
+  font-size: 20px;
+  border-radius: 4px;
+  background-color: rgba(23, 23, 23, 0.2);
+
+}
+
+.btn-red-sm{
+  background-color: red;
+  color: white;
+
 }
