--- a/style.css
+++ b/style.css
@@ -88,8 +88,12 @@ nav button {
 
 .btn{
   padding: 3px 8px;
-  font-weight: bold;
-  background-color: white;
+  font-weight: 400;
+  color: white;
+  background-color: rgb(248, 243, 243, 0.021);
+  border-radius: 4px;
+  border: 1px solid white;
+  cursor: pointer;
 
 }
 
@@ -101,6 +105,14 @@ nav button {
   border-radius: 4px;
 
 }
+
+.btn-red-sm{
+  background-color: red;
+  color: white;
+
+}
+
+
 
 .main input{
   padding: 7px 101px 8px 14px;
@@ -119,8 +131,4 @@ nav button {
     gap: 7px;
 }
 
-.btn-red-sm{
-  background-color: red;
-  color: white;
 
-}
