--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&family=Poppins:wght@300;700& display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&family=Poppins:wght@300;700& display=swap");
 
 * {
   padding: 0;
@@ -86,7 +86,7 @@ nav button {
   background-color: rgb(39, 38, 38);
 }
 
-.btn{
+.btn {
   padding: 3px 8px;
   font-weight: 400;
   color: white;
@@ -94,41 +94,57 @@ nav button {
   border-radius: 4px;
   border: 1px solid white;
   cursor: pointer;
-
 }
 
-.btn-red{
+.btn-red {
   background-color: red;
   color: white;
   padding: 3px 24px;
   font-size: 20px;
   border-radius: 4px;
-
+  font-weight: 500;
 }
 
-.btn-red-sm{
+.btn-red-sm {
   background-color: red;
   color: white;
-
 }
 
-
-
-.main input{
+.main input {
   padding: 7px 101px 8px 14px;
-  font-weight: 900;
+  color: white;
   font-size: 12px;
   border-radius: 4px;
   background-color: rgba(23, 23, 23, 0.7);
   border: 1px solid rgba(246, 238, 238, 0.5);
-
 }
 
-.hero-buttons{
+.hero-buttons {
   display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 7px;
+  align-items: center;
+  justify-content: center;
+  gap: 7px;
 }
 
+.first{
+  display: flex;
+  justify-content: center;
+  max-width: 70vw;
+  margin: auto;
+  color: white;
+  justify-content: center;
+  align-items: center;
 
+}
+
+.secImg img{
+  width: 30vw;
+  position: relative;
+  z-index: 10;
+}
+
+.secImg video{
+  position: absolute;
+  top: 51px;
+  right: 0;
+}
