--- a/style.css
+++ b/style.css
@@ -134,7 +134,6 @@ nav button {
   color: white;
   justify-content: center;
   align-items: center;
-
 }
 
 .secImg {
@@ -144,9 +143,22 @@ nav button {
   width: 36vw;
 }
 
-.secImg video{
+.secImg video {
   position: absolute;
   top: 51px;
   right: 0;
-  }
-    
+}
+
+section.first > div {
+  display: flex;
+  flex-direction: column;
+}
+
+section.first > div :nth-child(1) {
+  font-size: 48px;
+  font-weight: bolder;
+}
+
+section.first > div :nth-child(2) {
+  font-size: 24px;
+}
