--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ section.first > div :nth-child(2) {
 
 .faq h2{
   text-align: center;
+  font-size: 48px;
 }
 
 .faq{
@@ -176,11 +177,20 @@ section.first > div :nth-child(2) {
   padding: 34px;
 }
 
+.faqbox:hover {
+  background-color: rgb(38, 36, 36);
+  color: white;
+}
+
+
 .faqbox {
+  transition: all 3s ease-out;
+  font-size: 24px;
   display: flex;
   justify-content: space-between;
-  background-color: gray;
+  background-color: #2d2d2d;
   padding: 24px;
-  max-width: 40vw;
+  max-width: 70vw;
   margin: 34px auto;
+  cursor: pointer;
 }
