--- a/style.css
+++ b/style.css
@@ -34,12 +34,12 @@ nav {
   margin: auto;
   display: flex;
   align-items: center;
-  height: 62px;
+  height: 100px;
 }
 
 nav img {
   color: red;
-  width: 114px;
+  width: 130px;
   position: relative;
   z-index: 10;
 }
@@ -51,7 +51,7 @@ nav button {
 
 .hero {
   font-family: "Martel Sans", sans-serif;
-  height: calc(100% - 62px);
+  height: calc(100% - 100px);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -84,6 +84,8 @@ nav button {
 .separation {
   height: 7px;
   background-color: rgb(39, 38, 38);
+  position: relative;
+  z-index: 20;
 }
 
 .btn {
@@ -140,7 +142,7 @@ nav button {
   position: relative;
 }
 .secImg img {
-  width: 36vw;
+  width: 555px;
   position: relative;
   z-index: 10;
 }
@@ -150,11 +152,13 @@ nav button {
   position: absolute;
   top: 70px;
   right: 0px;
+  width: 555px;
 }
 
 section.first > div {
   display: flex;
   flex-direction: column;
+  padding: 34px 0;
 }
 
 section.first > div :nth-child(1) {
@@ -191,28 +195,84 @@ section.first > div :nth-child(2) {
   padding: 24px;
   max-width: 70vw;
   margin: 34px auto;
-  cursor: pointer;  
+  cursor: pointer;
 }
 
-footer{
+footer {
   color: white;
   max-width: 60vw;
   margin: auto;
   padding: 34px;
 }
 
-.footer{
+.footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   color: white;
 }
 
-.footer a{
+@media screen and (max-width: 1300px) {
+
+  nav{
+    max-width: 90vw;
+  }
+  .first {
+    flex-wrap: wrap;
+  }
+
+  .secImg img {
+    width: 305px;
+    position: relative;
+    z-index: 10;
+  }
+
+  .secImg video {
+    width: 305px;
+  }
+
+  .hero > :nth-child(1) {
+    font-size: 32px;
+  }
+  .hero > :nth-child(2) {
+    font-size: 18px;
+  }
+  .hero > :nth-child(3) {
+    font-size: 18px;
+  }
+  .hero-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 7px;
+  }
+  .faq h2 {
+    text-align: center;
+    font-size: 32px;
+  }
+  footer {
+    max-width: 90vw;
+  }
+
+  .footer-item{
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 25px;
+  }
+}
+
+.footer a {
   font-size: 14px;
   color: white;
 }
 
-.footer-item{
+.footer-item {
   display: flex;
   flex-direction: column;
   gap: 23px;
